--- a/resumo.css
+++ b/resumo.css
@@ -12,3 +12,11 @@ img {
     font-weight: bold;
     margin-left: 10px;
 }
+
+footer {
+    width: 100%;
+    position: fixed;
+    float: bottom;
+    bottom: 0;
+    left: 0;
+}
