--- a/resumo.css
+++ b/resumo.css
@@ -1,3 +1,99 @@
+body {
+    background-color: #10110E;
+}
+
+* {
+    color: #D1FFD6;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.mono {
+    font-family: monospace;
+}
+
+hr {
+    color: #5FFF57;
+}
+
+a {
+    color: #5FFF57;
+}
+
+a:hover {
+    color: #3DFF33;
+}
+
+footer {
+    background-color: #2B2C29;
+    text-align: center;
+}
+
+.middle {
+    display: inline-block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 200px;
+    margin: auto;
+}
+
+.topbar {
+    position: fixed;
+    top: 0;
+    background: #2B2C29;
+    width: 100%;
+    height: auto;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    background: #2B2C29;
+    width: 100%;
+    height: auto;
+}
+
+.question {
+    transition: 1s;
+}
+
+/* TEXT INPUTS */
+
+input[type=text], textarea {
+    /*-webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;*/
+    background: #2B2C29;
+    outline: none;
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    border: 2px solid #5FFF57;
+    border-radius: 2px;
+}
+
+input[type=text]:focus, textarea:focus {
+    background: #40413E;
+    box-shadow: 0 0 7px #3DFF33;
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    border: 2px solid #3DFF33;
+}
+
+/* BUTTONS */
+
+button, input[type=button], input[type=submit] {
+    color: black;
+    background-color: #535451;
+    border: 2px solid black;
+    border-radius: 2px;
+    margin: 5px 5px;
+}
+
+
 .conteudo {
     margin-left: 20px;
 }
