--- a/resumo.css
+++ b/resumo.css
@@ -2,11 +2,6 @@ body {
     background-color: #10110E;
 }
 
-* {
-    color: #D1FFD6;
-    font-family: 'Open Sans', sans-serif;
-}
-
 .mono {
     font-family: monospace;
 }
@@ -16,11 +11,11 @@ hr {
 }
 
 a {
-    color: #5FFF57;
+    color: #5FFF57 !important;
 }
 
 a:hover {
-    color: #3DFF33;
+    color: #3DFF33 !important;
 }
 
 footer {
@@ -87,7 +82,7 @@ input[type=text]:focus, textarea:focus {
 
 button, input[type=button], input[type=submit] {
     color: black;
-    background-color: #535451;
+    background-color: #666666;
     border: 2px solid black;
     border-radius: 2px;
     margin: 5px 5px;
@@ -122,4 +117,13 @@ sup, sub {
     padding-left: 1px;
     margin-right: 1px;
     font-size: 0.7em;
+}
+
+* {
+    color: #D1FFD6;
+    font-family: 'Open Sans', sans-serif;
+}
+
+b, i, u {
+    color: inherit;
 }
