--- a/resumo.css
+++ b/resumo.css
@@ -163,3 +163,8 @@ b, i, u {
     border-radius: 8px;
     padding: 8px;
 }
+
+.ajude:hover {
+    color: cyan !important;
+    font-weight: bold;
+}
