--- a/resumo.css
+++ b/resumo.css
@@ -1,5 +1,14 @@
+html {
+    display: table;
+    margin: auto;
+}
+
 body {
     background-color: #10110E;
+    overflow-x: hidden;
+    text-align: center;
+    width: auto;
+    display: table-cell;
 }
 
 :not(span) {
