SUPER UPDATE GOD DEMAIS

--- a/outros/resumos.css
+++ b/outros/resumos.css
@@ -75,7 +75,7 @@ footer {
 
 /* TEXT INPUTS */
 
-input[type=text], .editor, textarea {
+input[type=text], input[type=password], .editor, textarea {
     /*-webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
@@ -88,7 +88,7 @@ input[type=text], .editor, textarea {
     border-radius: 2px;
 }
 
-input[type=text]:focus, .editor:focus,  textarea:focus {
+input[type=text]:focus, input[type=password]:focus, .editor:focus,  textarea:focus {
     background: #40413E;
     box-shadow: 0 0 7px #3DFF33;
     padding: 3px 0px 3px 3px;
