--- a/outros/resumos.css
+++ b/outros/resumos.css
@@ -200,6 +200,7 @@ b, i, u {
     text-decoration: none;
     border-bottom: 10px;
     line-height: 20px;
+    white-space: nowrap;
 }
 
 .buttonlink:hover {
