--- a/outros/resumos.css
+++ b/outros/resumos.css
@@ -252,3 +252,20 @@ b, i, u {
     padding: 6px 15px 6px 15px;
     line-height: 25px;
 }
+
+/* Borda e posicionamento da mensagem do dia. */
+.mensagem {
+    border: 2px double #A4FFA4;
+    border-radius: 10px;
+    margin-top: 5px;
+    padding: 10px;
+    padding-top: 4px;
+    padding-bottom: 7px;
+    width: auto;
+    display: inline-block;
+    white-space: pre-wrap;
+}
+
+.mensagem table {
+    display: inline-block;
+}
